--- a/html/ricette 2_1.html
+++ b/html/ricette 2_1.html
@@ -6,76 +6,78 @@
 <br>
 È anche possibile cuocere in padella uova direttamente sulla parte superiore dell’hopper.
 </p>
-<img src="C:\Users\ACER\OneDrive\Desktop\html 17.04\immagini\appam.png">
+<img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\appam.png">
 <br><br>
 <p>Dosi per circa 16 hopper sottili in 3 ore:</p>
 <h3>Ingredienti:</h3>
 <style>
-table, td {
-  border: 1px solid;
-  border-collapse: collapse;
-}
-table.center {
-  margin-left: auto; 
-  margin-right: auto;
-}
-tr:nth-child(even) {background-color: #C5C6D0;}
-</style>
-<table class="center">
-    <tr>
-        <td>Farina di riso</td>
-        <td>3 tazze (700 ml)</td>
-    </tr>
-    <tr>
-        <td>Latte di cocco</td>
-        <td>2,5 tazze (640 ml)</td>
-    </tr>
-    <tr>
-        <td>Zucchero</td>
-        <td>1 cucchiaino (5 ml)</td>
-    </tr>
-    <tr>
-        <td>Lievito secco attivo</td>
-        <td>1 cucchiaino (5 ml)</td>
-    </tr>
-    <tr>
-        <td>Acqua calda</td>
-        <td>1/4 di tazza (60 ml)</td>
-    </tr>
-    <tr>
-        <td>Sale</td>
-        <td>1 cucchiaino (5 ml)</td>
-    </tr>
-    <tr>
-        <td>Olio vegetale</td>
-        <td>2-3 gocce per ogni hopper</td>
-    </tr>
-    <tr>
-        <td>Uova</td>
-        <td>Facoltative, tra 0 e 2 a persona preferibilmente</td>
-    </tr>
-</table>
-<h3>Procedimenti:</h3>
-<ul>
-    <li>Mescola il lievito, lo zucchero e l'acqua calda insieme. 
-    <br>
-    Aggiungi mescolando velocemente 1 cucchiaino (5 ml) di zucchero e 1 cucchiaino di lievito secco attivo. </li>
-    <br>
-	<li>Copri la ciotola e lascia riposare sul piano di lavoro per circa 2 ore.</li>
-    <br>	
-	<li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella. 
-	<br>
-	Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.</li>
-	<br>
-	<li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella.
-	<br>
-	Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.</li>
-	<br>
-	<li>Copri e cuoci fino a quando i bordi non saranno dorati.
-	<br>
-	Copri la padella con un coperchio e lascia cuocere l’hopper per 1-4 minuti</li>
-	<br>
-</ul>
-<a href="index.html">Home</a>
-</body>
-</html>
+    table, td {
+      border: 1px solid;
+      border-collapse: collapse;
+    }
+    table.center {
+      margin-left: auto; 
+      margin-right: auto;
+    }
+    tr:nth-child(even) {background-color: #C5C6D0;}
+    </style>
+    <table class="center">
+        <tr>
+            <td>Farina di riso</td>
+            <td>3 tazze (700 ml)</td>
+        </tr>
+        <tr>
+            <td>Latte di cocco</td>
+            <td>2,5 tazze (640 ml)</td>
+        </tr>
+        <tr>
+            <td>Zucchero</td>
+            <td>1 cucchiaino (5 ml)</td>
+        </tr>
+        <tr>
+            <td>Lievito secco attivo</td>
+            <td>1 cucchiaino (5 ml)</td>
+        </tr>
+        <tr>
+            <td>Acqua calda</td>
+            <td>1/4 di tazza (60 ml)</td>
+        </tr>
+        <tr>
+            <td>Sale</td>
+            <td>1 cucchiaino (5 ml)</td>
+        </tr>
+        <tr>
+            <td>Olio vegetale</td>
+            <td>2-3 gocce per ogni hopper</td>
+        </tr>
+        <tr>
+            <td>Uova</td>
+            <td>Facoltative, tra 0 e 2 a persona preferibilmente</td>
+        </tr>
+    </table>
+    <h3>Procedimenti:</h3>
+    <ul>
+        <li>Mescola il lievito, lo zucchero e l'acqua calda insieme. 
+        <br>
+        Aggiungi mescolando velocemente 1 cucchiaino (5 ml) di zucchero e 1 cucchiaino di lievito secco attivo. </li>
+        <br>
+        <li>Copri la ciotola e lascia riposare sul piano di lavoro per circa 2 ore.</li>
+        <br>	
+        <li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella. 
+        <br>
+        Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.</li>
+        <br>
+        <li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella.
+        <br>
+        Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.</li>
+        <br>
+        <li>Copri e cuoci fino a quando i bordi non saranno dorati.
+        <br>
+        Copri la padella con un coperchio e lascia cuocere l’hopper per 1-4 minuti</li>
+        <br>
+    </ul>
+    <a href="index.html">Home</a><br>
+    <a href="ricetta2.html"> Roti</a><br>
+
+    </body>
+    </html>
