--- a/html/ricette 2_2.html
+++ b/html/ricette 2_2.html
@@ -7,61 +7,63 @@
 Inoltre, il roti viene anche utilizzato per raccogliere il cibo e per fare la classica "scarpetta". 
 <br>
 È un alimento delizioso, versatile e sorprendentemente semplice da preparare.</p>
-<img src="C:\Users\ACER\OneDrive\Desktop\html 17.04\immagini\roti.png">
+<img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\roti.png">
 <br><br>
 <p>Dosi per circa 20-30 roti:</p>
 <h3>Ingredienti:</h3>
 <style>
-table, td {
-  border: 1px solid;
-  border-collapse: collapse;
-}
-table.center {
-  margin-left: auto; 
-  margin-right: auto;
-}
-tr:nth-child(even) {background-color: #C5C6D0;}
-</style>
-<table class="center">
-    <tr>
-        <td>Farina</td>
-        <td>195 g</td>
-    </tr>
-	<tr>
-        <td>Sale (facoltativo)</td>
-        <td>2-5 g</td>
-    </tr>
-	<tr>
-        <td>Olio</td>
-        <td>15 g circa</td>
-    </tr>
-	<tr>
-        <td>Acqua calda</td>
-        <td>240-360 ml</td>
-    </tr>
-</table>
-<h3>Procedimenti:</h3>
-<ul>
-    <li>Metti la farina all'interno di una grossa ciotola.</li>
-	<br>
-	<li>Aggiungi l'olio o il burro chiarificato alla farina.  
-	<br>
-	Mescola lentamente il composto finché non diventa sabbioso.</li>
-	<br>
-	<li>Versa l'acqua nella farina.</li>
-	<br>
-	<li>Lascia riposare l'impasto. 
-	<br>
-	Lascia riposare la pasta per circa mezz'ora o anche di più.</li>
-	<br>
-	<li>Inizia a cuocere il roti. 
-	<br>
-	Metti il disco di impasto sulla padella calda per 15-30 secondi.</li>
-	<br>
-	<li>
-	Cuoci l'altro lato del pane per altri 30 secondi. Il roti inizierà a gonfiarsi.</li>
-	<br>
-	</ul>
-<a href="index.html">Home</a>
-</body>
-</html>
+	table, td {
+	  border: 1px solid;
+	  border-collapse: collapse;
+	}
+	table.center {
+	  margin-left: auto; 
+	  margin-right: auto;
+	}
+	tr:nth-child(even) {background-color: #C5C6D0;}
+	</style>
+	<table class="center">
+		<tr>
+			<td>Farina</td>
+			<td>195 g</td>
+		</tr>
+		<tr>
+			<td>Sale (facoltativo)</td>
+			<td>2-5 g</td>
+		</tr>
+		<tr>
+			<td>Olio</td>
+			<td>15 g circa</td>
+		</tr>
+		<tr>
+			<td>Acqua calda</td>
+			<td>240-360 ml</td>
+		</tr>
+	</table>
+	<h3>Procedimenti:</h3>
+	<ul>
+		<li>Metti la farina all'interno di una grossa ciotola.</li>
+		<br>
+		<li>Aggiungi l'olio o il burro chiarificato alla farina.  
+		<br>
+		Mescola lentamente il composto finché non diventa sabbioso.</li>
+		<br>
+		<li>Versa l'acqua nella farina.</li>
+		<br>
+		<li>Lascia riposare l'impasto. 
+		<br>
+		Lascia riposare la pasta per circa mezz'ora o anche di più.</li>
+		<br>
+		<li>Inizia a cuocere il roti. 
+		<br>
+		Metti il disco di impasto sulla padella calda per 15-30 secondi.</li>
+		<br>
+		<li>
+		Cuoci l'altro lato del pane per altri 30 secondi. Il roti inizierà a gonfiarsi.</li>
+		<br>
+		</ul>
+		<a href="index.html">Home</a><br>
+		<a href="ricetta1.html"> Hopper</a><br>
+	
+	</body>
+	</html>
