--- a/html/ricette 2_index.html
+++ b/html/ricette 2_index.html
@@ -1,19 +1,25 @@
 <html>
-<body>
-<h1>PIATTI TIPICI DELLO SRI LANKA</h1>
-<br>
-<img src="C:\Users\ACER\OneDrive\Desktop\html 17.04\immagini\sri lanka.png">
-<br><br>
-<p>La cucina singalese è basata sulla mescolanza di prodotti locali 
-<br>
-con ricette e prodotti portati sull'isola nel corso dei secoli da 
-<br>
-indiani, arabi, portoghesi, olandesi e britannici.
-</p>
-<br>
-<a href="ricetta1.html">Hopper</a>
-<br>
-<a href="ricetta2.html">Roti</a>
-</body>
-</html>
 
+<head>
+    <title>piatti tipici dello SriLanka</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h1 class="title">PIATTI TIPICI DELLO SRI LANKA</h1>
+    <br>
+    <img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\sri lanka.png">
+    <br><br>
+    <p>La cucina singalese è basata sulla mescolanza di prodotti locali
+        <br>
+        con ricette e prodotti portati sull'isola nel corso dei secoli da
+        <br>
+        indiani, arabi, portoghesi, olandesi e britannici.
+    </p>
+    <br>
+    <a href="ricetta1.html">Hopper</a>
+    <br>
+    <a href="ricetta2.html">Roti</a>
+</body>
+
+</html>
