--- a/html/ricette 2_1.html
+++ b/html/ricette 2_1.html
@@ -1,25 +1,31 @@
 <html>
+
 <body>
-<h1>HOPPER</h1>
-<br>
-<p>L’hopper, noto anche come appam, è un popolare e versatile "pancake" diffuso in Sri Lanka.
-<br>
-È anche possibile cuocere in padella uova direttamente sulla parte superiore dell’hopper.
-</p>
-<img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\appam.png">
-<br><br>
-<p>Dosi per circa 16 hopper sottili in 3 ore:</p>
-<h3>Ingredienti:</h3>
-<style>
-    table, td {
-      border: 1px solid;
-      border-collapse: collapse;
-    }
-    table.center {
-      margin-left: auto; 
-      margin-right: auto;
-    }
-    tr:nth-child(even) {background-color: #C5C6D0;}
+    <h1>HOPPER</h1>
+    <br>
+    <p>L’hopper, noto anche come appam, è un popolare e versatile "pancake" diffuso in Sri Lanka.
+        <br>
+        È anche possibile cuocere in padella uova direttamente sulla parte superiore dell’hopper.
+    </p>
+    <img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\appam.png">
+    <br><br>
+    <p>Dosi per circa 16 hopper sottili in 3 ore:</p>
+    <h3>Ingredienti:</h3>
+    <style>
+        table,
+        td {
+            border: 1px solid;
+            border-collapse: collapse;
+        }
+
+        table.center {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        tr:nth-child(even) {
+            background-color: #C5C6D0;
+        }
     </style>
     <table class="center">
         <tr>
@@ -57,27 +63,32 @@
     </table>
     <h3>Procedimenti:</h3>
     <ul>
-        <li>Mescola il lievito, lo zucchero e l'acqua calda insieme. 
-        <br>
-        Aggiungi mescolando velocemente 1 cucchiaino (5 ml) di zucchero e 1 cucchiaino di lievito secco attivo. </li>
+        <li>Mescola il lievito, lo zucchero e l'acqua calda insieme.
+            <br>
+            Aggiungi mescolando velocemente 1 cucchiaino (5 ml) di zucchero e 1 cucchiaino di lievito secco attivo.
+        </li>
         <br>
         <li>Copri la ciotola e lascia riposare sul piano di lavoro per circa 2 ore.</li>
-        <br>	
-        <li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella. 
-        <br>
-        Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.</li>
         <br>
         <li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella.
+            <br>
+            Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.
+        </li>
         <br>
-        Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.</li>
+        <li>Aggiungi un mestolo pieno di pastella e fallo roteare intorno alla padella.
+            <br>
+            Versa circa 1/3 di tazza (80 ml) di pastella nel tegame.
+        </li>
         <br>
         <li>Copri e cuoci fino a quando i bordi non saranno dorati.
-        <br>
-        Copri la padella con un coperchio e lascia cuocere l’hopper per 1-4 minuti</li>
+            <br>
+            Copri la padella con un coperchio e lascia cuocere l’hopper per 1-4 minuti
+        </li>
         <br>
     </ul>
     <a href="index.html">Home</a><br>
     <a href="ricetta2.html"> Roti</a><br>
 
-    </body>
-    </html>
+</body>
+
+</html>
