--- a/html/ricette 2_2.html
+++ b/html/ricette 2_2.html
@@ -1,26 +1,34 @@
 <html>
+
 <body>
-<h1>ROTI</h1>
-<br>
-<p>Si tratta di un pane non lievitato che viene mangiato tutti i giorni, preparato quotidianamente e gustato con curry. 
-<br>
-Inoltre, il roti viene anche utilizzato per raccogliere il cibo e per fare la classica "scarpetta". 
-<br>
-È un alimento delizioso, versatile e sorprendentemente semplice da preparare.</p>
-<img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\roti.png">
-<br><br>
-<p>Dosi per circa 20-30 roti:</p>
-<h3>Ingredienti:</h3>
-<style>
-	table, td {
-	  border: 1px solid;
-	  border-collapse: collapse;
-	}
-	table.center {
-	  margin-left: auto; 
-	  margin-right: auto;
-	}
-	tr:nth-child(even) {background-color: #C5C6D0;}
+	<h1>ROTI</h1>
+	<br>
+	<p>Si tratta di un pane non lievitato che viene mangiato tutti i giorni, preparato quotidianamente e gustato con
+		curry.
+		<br>
+		Inoltre, il roti viene anche utilizzato per raccogliere il cibo e per fare la classica "scarpetta".
+		<br>
+		È un alimento delizioso, versatile e sorprendentemente semplice da preparare.
+	</p>
+	<img src="C:\Users\amelia.wannaku\Desktop\html ricette 2.0\immagini\roti.png">
+	<br><br>
+	<p>Dosi per circa 20-30 roti:</p>
+	<h3>Ingredienti:</h3>
+	<style>
+		table,
+		td {
+			border: 1px solid;
+			border-collapse: collapse;
+		}
+
+		table.center {
+			margin-left: auto;
+			margin-right: auto;
+		}
+
+		tr:nth-child(even) {
+			background-color: #C5C6D0;
+		}
 	</style>
 	<table class="center">
 		<tr>
@@ -44,26 +52,30 @@ Inoltre, il roti viene anche utilizzato per raccogliere il cibo e per fare la cl
 	<ul>
 		<li>Metti la farina all'interno di una grossa ciotola.</li>
 		<br>
-		<li>Aggiungi l'olio o il burro chiarificato alla farina.  
-		<br>
-		Mescola lentamente il composto finché non diventa sabbioso.</li>
+		<li>Aggiungi l'olio o il burro chiarificato alla farina.
+			<br>
+			Mescola lentamente il composto finché non diventa sabbioso.
+		</li>
 		<br>
 		<li>Versa l'acqua nella farina.</li>
 		<br>
-		<li>Lascia riposare l'impasto. 
+		<li>Lascia riposare l'impasto.
+			<br>
+			Lascia riposare la pasta per circa mezz'ora o anche di più.
+		</li>
 		<br>
-		Lascia riposare la pasta per circa mezz'ora o anche di più.</li>
-		<br>
-		<li>Inizia a cuocere il roti. 
-		<br>
-		Metti il disco di impasto sulla padella calda per 15-30 secondi.</li>
+		<li>Inizia a cuocere il roti.
+			<br>
+			Metti il disco di impasto sulla padella calda per 15-30 secondi.
+		</li>
 		<br>
 		<li>
-		Cuoci l'altro lato del pane per altri 30 secondi. Il roti inizierà a gonfiarsi.</li>
+			Cuoci l'altro lato del pane per altri 30 secondi. Il roti inizierà a gonfiarsi.</li>
 		<br>
-		</ul>
-		<a href="index.html">Home</a><br>
-		<a href="ricetta1.html"> Hopper</a><br>
-	
-	</body>
-	</html>
+	</ul>
+	<a href="index.html">Home</a><br>
+	<a href="ricetta1.html"> Hopper</a><br>
+
+</body>
+
+</html>
